
* Marks spans as "exit spans" across all instrumentations, preventing additional
  child spans from being added to the exit spans.  See issue for a full list of
  spans types that will be treated as exit spans. ({issues}2601[#2601])

[float]
===== Bug fixes

[[release-notes-3.31.0]]
==== 3.31.0 2022/03/23

[float]
===== Features

* Add `captureBody` support for Hapi. ({issues}1905[#1905])

* If a SNS or SQS single event trigger to an instrumented Lambda function
  includes message attributes with the name "traceparent" (and "tracestate"),
  case-insensitive, then those are used to continue the trace. This was already
  being done for API Gateway event headers.

[float]
===== Bug fixes

* Fix a bug with Lambda instrumentation where the APM agent would result in
  an otherwise working Lambda function to respond with `null` if the Lambda
  was missing the https://github.com/elastic/apm-aws-lambda[Elastic APM Lambda Extension].
  ({issues}2598[#2598])

* Fix a bug in Lambda instrumentation in the capturing of SNS and SQS event
  message attributes. ({issues}2605[#2605])


[[release-notes-3.30.0]]
==== 3.30.0 2022/03/10

[float]
===== Breaking changes

* Added a new config option <<span-stack-trace-min-duration,`spanStackTraceMinDuration`>>
  that replaces both <<capture-span-stack-traces,`captureSpanStackTraces`>>
  and <<span-frames-min-duration,`spanFramesMinDuration`>>. The latter two are
  now deprecated, but still supported. If `spanStackTraceMinDuration` is
  specified, then any value for the deprecated two options will be ignored.
+
There is a significant change in _default_ behavior of the APM agent. If none
of these configuration options is specified, then the default
(`spanStackTraceMinDuration: -1`) is that stack traces are *not* collected
and reported for any spans. This change in default behavior was made because
the CPU performance impact of collecting span stack traces was found to be