@@ -133,10 +133,6 @@ Transaction.prototype.createSpan = function (...args) {
   if (!this.sampled) {
     return null
   }
-  if (this.ended) {
-    this._agent.logger.debug('transaction already ended - cannot build new span %o', { trans: this.id, parent: this.parentId, trace: this.traceId }) // TODO: Should this be supported in the new API?
-    return null
-  }
   if (this._builtSpans >= this._agent._conf.transactionMaxSpans) {
     this._droppedSpans++
     return null
