@@ -43,6 +43,9 @@ Notes:
   child spans from being added to the exit spans.  See issue for a full list of
   spans types that will be treated as exit spans. ({issues}2601[#2601])
 
+* Allow a new span to be created/started even if its transaction has ended.
+  This is expected to be a very rare use case. ({pull}2653[#2653])
+
 [float]
 ===== Bug fixes
 
